--- a/WebTool-AI/WebTool-AI.csproj
+++ b/WebTool-AI/WebTool-AI.csproj
@@ -362,8 +362,10 @@
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\css\bootstrap-rtl.css" />
+    <Content Include="Content\css\bootstrap-rtl.min.css" />
     <Content Include="Content\css\custom-rtl.css" />
     <Content Include="Content\css\login-rtl.css" />
+    <Content Include="Content\css\rtl.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap.min.css" />
     <Content Include="Content\DataTables\css\autoFill.bootstrap4.css" />
